# vrobot_route_follow

./: .gitignore  CMakeLists.txt  analysis.md  package.xml  todo.md
action/: MoveToPose.action
include/vrobot_route_follow/: graph_pose.hpp
include/vrobot_route_follow/algorithms/: algorithm_interface.hpp  link_based_planner.hpp  rich_link_based_planner.hpp  rich_pathfinding.hpp  scoring.hpp
include/vrobot_route_follow/core/: geometric_utils.hpp  graph_base.hpp  pathfinding.hpp  rich_database_loader.hpp  rich_geometric_utils.hpp  rich_graph.hpp  rich_path_optimizer.hpp  rich_path_planner.hpp  rich_path_validator.hpp
include/vrobot_route_follow/data_structures/: curve_link_info.hpp  enhanced_path_segment.hpp  link_info.hpp  node_info.hpp  path_attributes.hpp  rich_path_result.hpp
include/vrobot_route_follow/utils/: database_converter.hpp  db_client.hpp  nav_conversion.hpp  node_thread.hpp  simple_action_server.hpp  visualization.hpp  vpath_builder.hpp
models/: Curvelink.cc  Curvelink.h  Map.cc  Map.h  Node.cc  Node.h  Straightlink.cc  Straightlink.h  model.json
src/: move_to_pose_action_server.cpp  move_to_pose_service_server.cpp  path_planning_service.cpp  test_move_to_pose_client.cpp  test_path_planning_client.cpp  test_readdb.cpp
src/vrobot_route_follow/: graph_pose.cpp
src/vrobot_route_follow/algorithms/: algorithm_interface.cpp  link_based_planner.cpp  rich_link_based_planner.cpp  rich_pathfinding.cpp  scoring.cpp
src/vrobot_route_follow/core/: geometric_utils.cpp  graph_base.cpp  pathfinding.cpp  rich_database_loader.cpp  rich_graph.cpp  rich_path_optimizer.cpp  rich_path_planner.cpp  rich_path_validator.cpp
src/vrobot_route_follow/data_structures/: curve_link_info.cpp  enhanced_path_segment.cpp  link_info.cpp  node_info.cpp  path_attributes.cpp  rich_path_result.cpp
src/vrobot_route_follow/utils/: database_converter.cpp  nav_conversion.cpp  visualization.cpp  vpath_builder.cpp
srv/: MoveToPose.srv  PathPlanning.srv
